Return unmodifiable collections; Sonar cleanup (#420)
* Return unmodifiable Set from KiwiUrls2#uniqueAuthorityOnlyUrls (#418)
* Return unmodifiable Map from JarManifests#getMainAttributesAsMap (#419)
* Sonar cleanup:
  - "Stream.toList()" method should be used instead of "collectors"
    when unmodifiable list needed java:S6204
  - Methods should not have identical implementations java:S4144
  - Local variables should not shadow class fields java:S1117

Closes #418
Closes #419